# Django-SMS-Verification

./: README.md  db.sqlite3  pyproject.toml
apps/: admin.py  forms.py  models.py  urls.py  views.py
apps/migrations/: 0001_initial.py
root/: settings.py
templates/: home.html
templates/auth/: confirm.html  login.html  register.html
